# marimo_experiments

./: Field.py  Polynom.py  config.py  lesson11.py  lesson12.py  main_page.py  power_balance.py  power_balance_alt.py  pyproject.toml  taylor.py  test.py  ui_sidebar.py
