[project]
name = "marimo-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "temper8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo (>=0.13.6,<0.15.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
